--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "ejs": "~2.6.1",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.22",
-        "morgan": "~1.9.1"
+        "morgan": "~1.9.1",
+        "nodemailer": "^6.4.10",
+        "nodemailer-sendgrid": "^1.0.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
