--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
         "dotenv": "^8.2.0",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
+        "express-session": "^1.17.1",
         "http-errors": "~1.6.3",
+        "joi": "^14.3.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.22",
         "morgan": "~1.9.1",
         "nodemailer": "^6.4.10",
-        "nodemailer-sendgrid": "^1.0.3"
+        "nodemailer-sendgrid": "^1.0.3",
+        "passport": "^0.4.1",
+        "passport-google-oauth": "^2.0.0",
+        "passport-jwt": "^4.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
