--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "mongoose": "^5.9.22",
         "morgan": "~1.9.1",
         "nodemailer": "^6.4.10",
+        "nodemailer-handlebars": "^1.0.1",
         "nodemailer-sendgrid": "^1.0.3",
         "passport": "^0.4.1",
         "passport-google-oauth": "^2.0.0",
