--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "nodemon --inspect app.js"
     },
     "dependencies": {
+        "@hapi/joi": "^17.1.1",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
@@ -16,6 +17,7 @@
         "http-errors": "~1.6.3",
         "joi": "^14.3.1",
         "jsonwebtoken": "^8.5.1",
+        "mongodb": "^3.5.9",
         "mongoose": "^5.9.22",
         "morgan": "~1.9.1",
         "nodemailer": "^6.4.10",
