--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "mongodb": "^3.5.9",
         "mongoose": "^5.9.22",
         "morgan": "~1.9.1",
+        "multer": "^1.4.2",
         "nodemailer": "^6.4.10",
         "nodemailer-handlebars": "^1.0.1",
         "nodemailer-sendgrid": "^1.0.3",
