--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express-session": "^1.17.1",
         "http-errors": "~1.6.3",
         "joi": "^14.3.1",
+        "joi-objectid": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.9",
         "mongoose": "^5.9.22",
