--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "passport-jwt": "^4.0.0"
     },
     "devDependencies": {
+        "eslint": "^7.7.0",
+        "eslint-plugin-prettier": "^3.1.4",
         "mocha": "^8.1.1",
         "nodemon": "^2.0.4"
     }
