--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@hapi/joi": "^17.1.1",
+        "babel-eslint": "^10.1.0",
         "bcryptjs": "^2.4.3",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
