--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
         "passport-jwt": "^4.0.0"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^3.10.1",
+        "@typescript-eslint/parser": "^3.10.1",
         "eslint": "^7.7.0",
+        "eslint-config-airbnb-base": "^14.2.0",
+        "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
         "mocha": "^8.1.1",
         "nodemon": "^2.0.4"
